--- a/java-ee-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/java-ee-jsf/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,11 @@
   </welcome-file-list>
 
   <context-param>
+    <param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+    <param-value>true</param-value>
+  </context-param>
+
+  <context-param>
     <param-name>jdbcConnectionString</param-name>
     <param-value>jdbc:mysql://localhost:3306/javaee_shop_db?createDatabaseIfNotExist=true&amp;allowPublicKeyRetrieval=true&amp;useSSL=false&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;serverTimezone=UTC</param-value>
   </context-param>
